[ADD]: Prima DB added

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ AUTH_GITHUB_SECRET=dbea6a9e63b2773583db44c53ef92c0dd7f1706c
 
 AUTH_GOOGLE_ID=860983762248-g541bmu270vof7tbb78vgfbpeb3mh9fu.apps.googleusercontent.com
 AUTH_GOOGLE_SECRET=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
+
+DATABASE_URL="postgresql://postgres.bpwwceiywsnkjahohfxg:v&RDPr^+tJ%^+<MJr.c^cs0*hU@aws-0-us-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+
+DIRECT_URL="postgresql://postgres.bpwwceiywsnkjahohfxg:v&RDPr^+tJ%^+<MJr.c^cs0*hU@aws-0-us-east-1.pooler.supabase.com:5432/postgres"
